feat: introduce language tag

--- a/_posts/2023-10-23-počitnice.md
+++ b/_posts/2023-10-23-počitnice.md
@@ -1,8 +1,12 @@
+---
+tag: 🇸🇮
+---
+
 Avgusta smo se odpravili na dopust v Slovenijo. Bilo je fino, kot vedno je lepo videti družino in prijatelje na vsake toliko časa. To je bil tudi eden izmed redkih dopustov, kjer si vzamem 14 dni skupaj dopusta tudi v službi. Vse lepo in prav.
 
-Seveda pa ne more iti vse lepo, tako da je že drugi dan po prihodu nazaj v službo sledil klic šefa s stavkom "Aleš, we need to talk.". Takoj mi je bilo jasno, da je nekaj narobe - in sem tudi hitro izvedel, da se v podjetju dogaja "prestrukturiranje" in sem postal ti. "presežni delavec" kot smo se tega učili na univerzi pri predmetu Ekonimika. Po domače povedano, odpustili so me, ker je firmi zmanjkalo denarja. Tako pač je v ti. startup podjetju, ki (še?) ne posluje pozitivno in je odvisno od zunanjih investicij. Moje edino vprašanje je bilo, če sem odpuščen zaradi mojega dela in ko sem dobil zagotovilo, da če ne bi bil denar problem, bi me z veseljem obdržali, sem se malo pomiril. 
+Seveda pa ne more iti vse lepo, tako da je že drugi dan po prihodu nazaj v službo sledil klic šefa s stavkom "Aleš, we need to talk.". Takoj mi je bilo jasno, da je nekaj narobe - in sem tudi hitro izvedel, da se v podjetju dogaja "prestrukturiranje" in sem postal ti. "presežni delavec" kot smo se tega učili na univerzi pri predmetu Ekonimika. Po domače povedano, odpustili so me, ker je firmi zmanjkalo denarja. Tako pač je v ti. startup podjetju, ki (še?) ne posluje pozitivno in je odvisno od zunanjih investicij. Moje edino vprašanje je bilo, če sem odpuščen zaradi mojega dela in ko sem dobil zagotovilo, da če ne bi bil denar problem, bi me z veseljem obdržali, sem se malo pomiril.
 
-Tako sem začel iskati novo službo, kar ni nikoli prijetno, kajti po mojih izkušnjah je iskanje službe kot iskanje partnerja - šele ko si nekaj časa že v "zvezi", vidiš kje sploh si. Da ne omenjam očitnega, ko dobiš kar nekaj zavrnitev. 
+Tako sem začel iskati novo službo, kar ni nikoli prijetno, kajti po mojih izkušnjah je iskanje službe kot iskanje partnerja - šele ko si nekaj časa že v "zvezi", vidiš kje sploh si. Da ne omenjam očitnega, ko dobiš kar nekaj zavrnitev.
 
 Kljub vsemu sem na srečo našel novega zaposlovalca kar hitro in ker sem se s prejšnjim tudi dogovoril, da takoj prekinem z delom, a plača ostane do konca odpovednega roka, sem tako pridobil skoraj dva meseca počitnic. In tako sem v dveh tednih prišel iz stanja "brez službe sem, kaj pa sedaj?" do "imam dva meseca plačanega dopusta, kaj pa sedaj?".
 
